--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "Стартовий шаблон для проекту на основі Gulp",
   "main": "gulpfile.babel.js",
-  "keywords": [],
-  "author": "",
+  "author": "RomanStashuk",
   "license": "ISC",
   "repository": {
     "type": "git",
@@ -17,7 +16,14 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp --production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "npm run build && gh-pages -d build",
+    "dist": "npm run build && gulp zip",
+    "eslint": "eslint ./src/js/**/*.js",
+    "eslint-fix": "npm run eslint --fix",
+    "stylelint": "stylelint ./src/sass/**/*.scss --custom-syntax postcss-scss",
+    "stylelint-fix": "npm run stylelint --fix",
+    "lintspaces": "gulp lintspaces",
+    "test": "npm run eslint && npm run stylelint && npm run lintspaces"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -25,6 +31,9 @@
     "@babel/register": "^7.18.6",
     "browser-sync": "^2.27.10",
     "del": "^6.1.1",
+    "eslint": "^8.19.0",
+    "eslint-config-standard": "^17.0.0",
+    "gh-pages": "^4.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
@@ -50,9 +59,14 @@
     "gulp-size": "^4.0.1",
     "gulp-ttf2woff2": "^4.0.1",
     "gulp-webp": "^4.0.1",
-    "gulp-webp-css": "^1.1.0",
     "gulp-webp-html": "^1.0.2",
+    "gulp-zip": "^5.1.0",
+    "postcss-scss": "^4.0.4",
     "sass": "^1.53.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-standard-scss": "^4.0.0",
+    "stylelint-scss": "^4.3.0",
     "webpack": "^5.73.0",
     "webpack-stream": "^7.0.0"
   },
