--- a/.stylelintrc
+++ b/.stylelintrc
@@ -16,6 +16,7 @@
     "declaration-block-no-redundant-longhand-properties": null,
     "selector-class-pattern": "^[a-z]([a-z0-9-]+)?(__([a-z0-9]+-?)+)?(--([a-z0-9]+-?)+){0,2}$|^Mui.*$",
     "scss/dollar-variable-pattern": null,
+    "scss/at-import-partial-extension": "always",
     "font-family-name-quotes": "always-unless-keyword",
     "declaration-colon-space-before": "never",
     "declaration-colon-space-after": "always-single-line",
