--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,10 @@
     "semi": [
       "error",
       "always"
+    ],
+    "space-before-function-paren": [
+      "error",
+      "never"
     ]
   }
 }
