--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gulp-sass-glob": "^1.1.0",
     "gulp-shorthand": "^1.1.0",
     "gulp-size": "^4.0.1",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-ttf2woff2": "^4.0.1",
     "gulp-webp": "^4.0.1",
     "gulp-webp-html": "^1.0.2",
